Change project name

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Bowler</name>
+	<name>BowlerDebug</name>
 	<comment>Project Bowler created by Buildship.</comment>
 	<projects>
 	</projects>
